--- a/mi_tables.css
+++ b/mi_tables.css
@@ -6,8 +6,8 @@
    Case Problem 1
 
    Tables Style Sheet
-   Author: 
-   Date:   
+   Author: Gabriel Hernandez     
+   Date:  12/10/18  
 
    Filename:         mi_tables.css
 
