--- a/mi_tables.css
+++ b/mi_tables.css
@@ -14,22 +14,60 @@
 */
 
 /* Table Styles */
+/* The table will have a background with a linear gradient.
+and a border will surround the whle thing, not the cells inside. */
+table {
+    background: linear-gradient(rgb(190, 215, 255), black);
+    border: 5px solid gray;
+}
 
+ /* Here the th's and the td's will have the following styles which is bassically the every cell in the table. */ 
+ table th, table td {
+    border: 3px solid gray;
+    line-height: 1.4em;
+    padding: 8px;
+}
+
+/* Only the table heads will have a black background making them stand out compared to the normal data cells.*/
+
+th {
+    background-color:black;
+    color:  rgb(130, 210, 255);
+    font-weight: normal;
+}
+
+/* The data cells are differentiated from the headers making it eaier to read  */
+
+td {
+    color: white;
+    font-size: 0.9em;
+    vertical-align: top;
+}
 
 
 /* Column Styles */
+/* the columns sizes are increased to make reaading the table easier. */
+col#firstCol {
+    width: 24%;
+}
 
-
+col.dataCols {
+    width: 19%;
+}
 
 /* Table Header Styles */
+/* the the height of the tr's on the thead make it easier to read */
+thead tr {
+    height: 60px;
+}
 
+/* Only the first tr and the first th are called beacause they are extra important */
+thead tr:first-of-type th:first-of-type {
+    font-size: 2em;
+}
 
-
-
-
-
-
-
-
-
-
+/* Here the first th is discluded so that the styles from before remain the same. */
+thead tr:first-of-type th:not(:first-of-type) {
+    background: transparent;
+    color: black; 
+}
